--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <meta property="og:locale" content="en_US">
     <meta property="og:site_name" content="Travelia is Tourism Agency that organizes leisure trips to several European countries">
     
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" 
-        crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" href="images/favicon.svg">    
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/style.css">
@@ -202,17 +202,77 @@
                 </div>
             </div>
         </section>
+
         <section id="git-started">
-            <p class="des-p"></p>
-            <p></p>
-            <a href="" class="btn-p btn-border-r view"></a>
+            <div class="container gs-img">
+                <div class="gs-con-inner">
+                    <p class="des-p">prepare yourself & let's explore the beauty of the world</p>
+                    <p>we have many special offors especialy for you</p>
+                    <a href="" class="btn-p btn-border-r view">get started</a>
+                </div>
+            </div>
         </section>
+
     </main>
     <!-- ==================== Main End ==================== -->
     
     <!-- ==================== Footer Section ==================== -->
     <footer>
-
+        <div class="container">
+            <div class="footer-links flex">
+                <div class="foo-links-inner">
+                    <div class="foo-logo">
+                        <img src="images/logo.svg" alt="logo">
+                    </div>
+                    <p>we always make our customer happy by providing as many choices as possible</p>
+                    <div class="social-links flex">
+                        <a href=""><i class="fa-brands fa-instagram fa-2x"></i></a>
+                        <a href=""><i class="fa-brands fa-facebook fa-2x"></i></a>
+                        <a href=""><i class="fa-brands fa-twitter fa-2x"></i></a>
+                    </div>
+                </div>
+                <div class="foo-touch">
+                    <h1>get in touch</h1>
+                    <p>question or feedback? we'd love to hear from you.</p>
+                    <div class="feedback">
+                        <input type="text" placeholder="Email address">
+                        <button class="feedback-msg btn-p">send</button>
+                    </div>
+                </div>
+                <div class="foo-about foo-w-180">
+                    <h1>about</h1>
+                    <ul>
+                        <li><a href="">about us</a></li>
+                        <li><a href="">features</a></li>
+                        <li><a href="">news</a></li>
+                        <li><a href="">menu</a></li>
+                    </ul>
+                </div>
+                <div class="foo-company foo-w-180">
+                    <h1>company</h1>
+                    <ul>
+                        <li><a href="">why company</a></li>
+                        <li><a href="">partner with us</a></li>
+                        <li><a href="">faq</a></li>
+                        <li><a href="">blog</a></li>
+                    </ul>
+                </div>
+                <div class="foo-support foo-w-180">
+                    <h1>support</h1>
+                    <ul>
+                        <li><a href="">account</a></li>
+                        <li><a href="">support center</a></li>
+                        <li><a href="">feedback</a></li>
+                        <li><a href="">contact us</a></li>
+                        <li><a href="">accessibilty</a></li>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+            <div class="footer-end">
+                <p>made with <i class="fa-solid fa-heart"></i> by <a href="https://instagram.com/mohammad.shaar3?igshid=NGExMmI2YTkyZg==" target="_blank" class="me">mohammad shaar</a></p>
+            </div>
+        </div>
     </footer>
     <!-- ==================== Footer End ==================== -->
     <script src="js/main.js"></script>
