--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li><a href="#" class="active">home</a></li>
                     <li><a href="#">about</a></li>
                     <li><a href="#">services</a></li>
-                    <li><a href="#">pricing</a></li>
+                    <li><a href="#">prices</a></li>
                     <li><a href="#">contact</a></li>
                 </ul>
                 <ul class="flex hiden">
@@ -39,7 +39,10 @@
                     <li><a class="sign-up btn-p btn-border-r" href="#">sign up</a></li>
                 </ul>
                 <span class="minu-icon" onclick="sideMinue()"><i class="fa-solid fa-bars fa-2x"></i></span>
-                <div class="side-minu"></div>
+                <div id="side" class="side-minu">
+                    <span class="xmark" onclick="exiteMinue()"><i class="fa-solid fa-circle-xmark fa-2x"></i></span>
+                    <ul class="flex"></ul>
+                </div>
             </div>
         </nav>
         <div class="intro container flex">
