--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="intro container flex">
             <div class="intro-text">
                 <a class="explor-btn btn-p btn-border-r" href="">explore the world <span class="erath"><img src="images/title-icon.svg" alt=""></span></a>
-                <h1>it's a big world out there, go explore</h1>
+                <p class="des-p">it's a big world out there, go explore</p>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit perferendis officia cum quisquam iste! Unde.</p>
                 <div class="intro-text-bottom flex">
                     <a class="btn-border-r btn-p plan" href="">plan a trip &gt;</a>
@@ -228,7 +228,7 @@
                     <div class="foo-logo">
                         <img src="images/logo.svg" alt="logo">
                     </div>
-                    <p>we always make our customer happy by providing as many choices as possible</p>
+                    <p>We always make our customer happy by providing as many choices as possible</p>
                     <div class="social-links flex">
                         <a href=""><i class="fa-brands fa-instagram fa-2x"></i></a>
                         <a href=""><i class="fa-brands fa-facebook fa-2x"></i></a>
@@ -237,7 +237,7 @@
                 </div>
                 <div class="foo-touch">
                     <h1>get in touch</h1>
-                    <p>question or feedback? we'd love to hear from you.</p>
+                    <p>Question or feedback? we'd love to hear from you.</p>
                     <div class="feedback">
                         <input type="text" placeholder="Email address">
                         <button class="feedback-msg btn-p">send</button>
