--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <li><a class="sign-up btn-p btn-border-r" href="#">sign up</a></li>
                 </ul>
                 <span class="minu-icon" onclick="sideMinue()"><i class="fa-solid fa-bars fa-2x"></i></span>
-                <div id="side" class="side-minu">
+                <div id="side" class="side-minu btn-border-r">
                     <span class="xmark" onclick="exiteMinue()"><i class="fa-solid fa-circle-xmark fa-2x"></i></span>
                     <ul class="flex"></ul>
                 </div>
@@ -121,7 +121,7 @@
                         <div class="tripe-img bg-lod-lazy">
                             <img loading="lazy" src="images/destination-2.jpg" alt="">
                         </div>
-                        <span class="des-price">$340</span>
+                        <span class="des-price">$360</span>
                         <h2>enjoy the beauty of the pakistan monument</h2>
                         <address>islamabad,pakistan</address>
                         <p><span class="rating"><i class="fa-solid fa-star"></i> 4.5</span> (16.5k review)</p>
@@ -130,7 +130,7 @@
                         <div class="tripe-img bg-lod-lazy">
                             <img loading="lazy" src="images/destination-3.jpg" alt="">
                         </div>
-                        <span class="des-price">$340</span>
+                        <span class="des-price">$400</span>
                         <h2>enjoy the beauty of the burj khalofa</h2>
                         <address>skyscraper in dubai</address>
                         <p><span class="rating"><i class="fa-solid fa-star"></i> 4.7</span> (19.7k review)</p>
@@ -139,7 +139,7 @@
                         <div class="tripe-img bg-lod-lazy">
                             <img loading="lazy" src="images/destination-4.jpg" alt="">
                         </div>
-                        <span class="des-price">$340</span>
+                        <span class="des-price">$380</span>
                         <h2>enjoy the beauty of the milaidhoo</h2>
                         <address>island in the maldives</address>
                         <p><span class="rating"><i class="fa-solid fa-star"></i> 4.7</span> (700 review)</p>
@@ -148,7 +148,7 @@
                         <div class="tripe-img bg-lod-lazy">
                             <img loading="lazy" src="images/destination-5.jpg" alt="">
                         </div>
-                        <span class="des-price">$340</span>
+                        <span class="des-price">$320</span>
                         <h2>enjoy the beauty of the ko tao</h2>
                         <address>island in the gulf of thailond</address>
                         <p><span class="rating"><i class="fa-solid fa-star"></i> 4.5</span> (985 review)</p>
@@ -157,7 +157,7 @@
                         <div class="tripe-img bg-lod-lazy">
                             <img loading="lazy" src="images/destination-6.jpg" alt="">
                         </div>
-                        <span class="des-price">$340</span>
+                        <span class="des-price">$350</span>
                         <h2>enjoy the beauty of the grand mecidiye mosque</h2>
                         <address>mosque in istanbul, turkiye</address>
                         <p><span class="rating"><i class="fa-solid fa-star"></i> 4.8</span> (29.6k review)</p>
