--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
     <meta property="og:title" content="Travel website">
     <meta property="og:type"  content="website">
-    <meta property="og:description" content="Travelia is a ">
+    <meta property="og:description" content="Travelia is a Tourism Agency that organizes leisure trips to several European countries">
     <meta property="og:locale" content="en_US">
-    <meta property="og:site_name" content="Travelia is Tourism Agency that organizes leisure trips to several European countries">
+    <meta property="og:site_name" content="Travelia.com">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" 
