--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                 <p class="des-p">explore top destination</p>
                 <div class="flex">
                     <div class="tripe-card">
-                        <div class="tripe-img bg-lod-lazy">
-                            <img loading="lazy" src="images/destination-1.jpg" alt="">
+                        <div class="tripe-img">
+                            <img class="bg-lod-lazy" loading="lazy" src="images/destination-1.jpg" alt="">
                         </div>
                         <span class="des-price">$340</span>
                         <h2>enjoy the beauty of the del pincio</h2>
@@ -118,8 +118,8 @@
                         <p><span class="rating"><i class="fa-solid fa-star"></i> 4.6</span> (11.3k review)</p>
                     </div>
                     <div class="tripe-card">
-                        <div class="tripe-img bg-lod-lazy">
-                            <img loading="lazy" src="images/destination-2.jpg" alt="">
+                        <div class="tripe-img">
+                            <img class="bg-lod-lazy" loading="lazy" src="images/destination-2.jpg" alt="">
                         </div>
                         <span class="des-price">$360</span>
                         <h2>enjoy the beauty of the pakistan monument</h2>
@@ -127,8 +127,8 @@
                         <p><span class="rating"><i class="fa-solid fa-star"></i> 4.5</span> (16.5k review)</p>
                     </div>
                     <div class="tripe-card">
-                        <div class="tripe-img bg-lod-lazy">
-                            <img loading="lazy" src="images/destination-3.jpg" alt="">
+                        <div class="tripe-img">
+                            <img class="bg-lod-lazy" loading="lazy" src="images/destination-3.jpg" alt="">
                         </div>
                         <span class="des-price">$400</span>
                         <h2>enjoy the beauty of the burj khalofa</h2>
@@ -136,8 +136,8 @@
                         <p><span class="rating"><i class="fa-solid fa-star"></i> 4.7</span> (19.7k review)</p>
                     </div>
                     <div class="tripe-card">
-                        <div class="tripe-img bg-lod-lazy">
-                            <img loading="lazy" src="images/destination-4.jpg" alt="">
+                        <div class="tripe-img">
+                            <img class="bg-lod-lazy" loading="lazy" src="images/destination-4.jpg" alt="">
                         </div>
                         <span class="des-price">$380</span>
                         <h2>enjoy the beauty of the milaidhoo</h2>
@@ -145,8 +145,8 @@
                         <p><span class="rating"><i class="fa-solid fa-star"></i> 4.7</span> (700 review)</p>
                     </div>
                     <div class="tripe-card">
-                        <div class="tripe-img bg-lod-lazy">
-                            <img loading="lazy" src="images/destination-5.jpg" alt="">
+                        <div class="tripe-img">
+                            <img class="bg-lod-lazy" loading="lazy" src="images/destination-5.jpg" alt="">
                         </div>
                         <span class="des-price">$320</span>
                         <h2>enjoy the beauty of the ko tao</h2>
@@ -154,8 +154,8 @@
                         <p><span class="rating"><i class="fa-solid fa-star"></i> 4.5</span> (985 review)</p>
                     </div>
                     <div class="tripe-card">
-                        <div class="tripe-img bg-lod-lazy">
-                            <img loading="lazy" src="images/destination-6.jpg" alt="">
+                        <div class="tripe-img">
+                            <img class="bg-lod-lazy" loading="lazy" src="images/destination-6.jpg" alt="">
                         </div>
                         <span class="des-price">$350</span>
                         <h2>enjoy the beauty of the grand mecidiye mosque</h2>
@@ -197,12 +197,12 @@
                 <h1 class="sec-h">photo gallery</h1>
                 <p class="des-p">photo's from travelers</p>
                 <div class="grid">
-                    <figure class="photo-card bg-lod-lazy"><img loading="lazy" src="images/gallery-1.jpg" alt=""></figure>
-                    <figure class="photo-card bg-lod-lazy"><img loading="lazy" src="images/gallery-2.jpg" alt=""></figure>
-                    <figure class="photo-card bg-lod-lazy"><img loading="lazy" src="images/gallery-3.jpg" alt=""></figure>
-                    <figure class="photo-card bg-lod-lazy"><img loading="lazy" src="images/gallery-4.jpg" alt=""></figure>
-                    <figure class="photo-card bg-lod-lazy"><img loading="lazy" src="images/gallery-5.jpg" alt=""></figure>
-                    <figure class="photo-card bg-lod-lazy"><img loading="lazy" src="images/gallery-6.jpg" alt=""></figure>
+                    <figure class="photo-card"><img class="bg-lod-lazy" loading="lazy" src="images/gallery-1.jpg" alt=""></figure>
+                    <figure class="photo-card"><img class="bg-lod-lazy" loading="lazy" src="images/gallery-2.jpg" alt=""></figure>
+                    <figure class="photo-card"><img class="bg-lod-lazy" loading="lazy" src="images/gallery-3.jpg" alt=""></figure>
+                    <figure class="photo-card"><img class="bg-lod-lazy" loading="lazy" src="images/gallery-4.jpg" alt=""></figure>
+                    <figure class="photo-card"><img class="bg-lod-lazy" loading="lazy" src="images/gallery-5.jpg" alt=""></figure>
+                    <figure class="photo-card"><img class="bg-lod-lazy" loading="lazy" src="images/gallery-6.jpg" alt=""></figure>
                 </div>
             </div>
         </section>
