remove bg layzy

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                 </div>
                 <ul class="flex hiden">
                     <li><a href="#" class="active">home</a></li>
-                    <li><a href="#">about</a></li>
                     <li><a href="#">services</a></li>
-                    <li><a href="#">prices</a></li>
-                    <li><a href="#">contact</a></li>
+                    <li><a href="#">trips</a></li>
+                    <li><a href="#">about</a></li>
+                    <li><a href="#">contact us</a></li>
                 </ul>
                 <ul class="flex hiden">
                     <li><a href="#">login</a></li>
@@ -49,7 +49,7 @@
             <div class="intro-text">
                 <a class="explor-btn btn-p btn-border-r" href="">explore the world <span class="erath"><img src="images/title-icon.svg" alt=""></span></a>
                 <p class="des-p">it's a big world out there, go explore</p>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit perferendis officia cum quisquam iste! Unde.</p>
+                <p>We always make our customer happy by providing as many choices as possible.</p>
                 <div class="intro-text-bottom flex">
                     <a class="btn-border-r btn-p plan" href="">plan a trip &gt;</a>
                     <div class="watch flex">
@@ -110,7 +110,7 @@
                 <div class="flex">
                     <div class="tripe-card">
                         <div class="tripe-img">
-                            <img class="bg-lod-lazy" loading="lazy" src="images/destination-1.jpg" alt="">
+                            <img src="images/destination-1.jpg" alt="">
                         </div>
                         <span class="des-price">$340</span>
                         <h2>enjoy the beauty of the del pincio</h2>
@@ -119,7 +119,7 @@
                     </div>
                     <div class="tripe-card">
                         <div class="tripe-img">
-                            <img class="bg-lod-lazy" loading="lazy" src="images/destination-2.jpg" alt="">
+                            <img src="images/destination-2.jpg" alt="">
                         </div>
                         <span class="des-price">$360</span>
                         <h2>enjoy the beauty of the pakistan monument</h2>
@@ -128,7 +128,7 @@
                     </div>
                     <div class="tripe-card">
                         <div class="tripe-img">
-                            <img class="bg-lod-lazy" loading="lazy" src="images/destination-3.jpg" alt="">
+                            <img src="images/destination-3.jpg" alt="">
                         </div>
                         <span class="des-price">$400</span>
                         <h2>enjoy the beauty of the burj khalofa</h2>
@@ -137,7 +137,7 @@
                     </div>
                     <div class="tripe-card">
                         <div class="tripe-img">
-                            <img class="bg-lod-lazy" loading="lazy" src="images/destination-4.jpg" alt="">
+                            <img src="images/destination-4.jpg" alt="">
                         </div>
                         <span class="des-price">$380</span>
                         <h2>enjoy the beauty of the milaidhoo</h2>
@@ -146,7 +146,7 @@
                     </div>
                     <div class="tripe-card">
                         <div class="tripe-img">
-                            <img class="bg-lod-lazy" loading="lazy" src="images/destination-5.jpg" alt="">
+                            <img src="images/destination-5.jpg" alt="">
                         </div>
                         <span class="des-price">$320</span>
                         <h2>enjoy the beauty of the ko tao</h2>
@@ -155,7 +155,7 @@
                     </div>
                     <div class="tripe-card">
                         <div class="tripe-img">
-                            <img class="bg-lod-lazy" loading="lazy" src="images/destination-6.jpg" alt="">
+                            <img src="images/destination-6.jpg" alt="">
                         </div>
                         <span class="des-price">$350</span>
                         <h2>enjoy the beauty of the grand mecidiye mosque</h2>
@@ -197,12 +197,12 @@
                 <h1 class="sec-h">photo gallery</h1>
                 <p class="des-p">photo's from travelers</p>
                 <div class="grid">
-                    <figure class="photo-card"><img class="bg-lod-lazy" loading="lazy" src="images/gallery-1.jpg" alt=""></figure>
-                    <figure class="photo-card"><img class="bg-lod-lazy" loading="lazy" src="images/gallery-2.jpg" alt=""></figure>
-                    <figure class="photo-card"><img class="bg-lod-lazy" loading="lazy" src="images/gallery-3.jpg" alt=""></figure>
-                    <figure class="photo-card"><img class="bg-lod-lazy" loading="lazy" src="images/gallery-4.jpg" alt=""></figure>
-                    <figure class="photo-card"><img class="bg-lod-lazy" loading="lazy" src="images/gallery-5.jpg" alt=""></figure>
-                    <figure class="photo-card"><img class="bg-lod-lazy" loading="lazy" src="images/gallery-6.jpg" alt=""></figure>
+                    <figure class="photo-card"><img src="images/gallery-1.jpg" alt=""></figure>
+                    <figure class="photo-card"><img src="images/gallery-2.jpg" alt=""></figure>
+                    <figure class="photo-card"><img src="images/gallery-3.jpg" alt=""></figure>
+                    <figure class="photo-card"><img src="images/gallery-4.jpg" alt=""></figure>
+                    <figure class="photo-card"><img src="images/gallery-5.jpg" alt=""></figure>
+                    <figure class="photo-card"><img src="images/gallery-6.jpg" alt=""></figure>
                 </div>
             </div>
         </section>
