animation for gallery

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta property="og:title" content="Travel website">
     <meta property="og:type"  content="website">
-    <meta property="og:description" content="Travelia is a Tourism Agency that organizes leisure trips to several European countries">
     <meta property="og:locale" content="en_US">
     <meta property="og:site_name" content="Travelia.com">
+    <meta property="og:title" content="Travel webpage">
+    <meta property="og:description" content="Travelia is a Tourism Agency that organizes leisure trips to several European countries">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" 
@@ -191,7 +191,7 @@
         </section>
         <!-- ==================== End Experience ==================== -->
 
-        <!-- ==================== End Experience ==================== -->
+        <!-- ==================== start gallery ==================== -->
         <section id="photo-gallery">
             <div class="container">
                 <h1 class="sec-h">photo gallery</h1>
@@ -279,6 +279,7 @@
         </div>
     </footer>
     <!-- ==================== Footer End ==================== -->
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
