fix grid overflow

--- a/index.html
+++ b/index.html
@@ -206,7 +206,9 @@
                 </div>
             </div>
         </section>
-
+        <!-- ==================== End gallery ==================== -->
+        
+        <!-- ==================== start git started ==================== -->
         <section id="git-started">
             <div class="container gs-img">
                 <div class="gs-con-inner">
@@ -216,6 +218,7 @@
                 </div>
             </div>
         </section>
+        <!-- ==================== End git started ==================== -->
 
     </main>
     <!-- ==================== Main End ==================== -->
